// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.sequencing.sequencer.bftordering.v1;

import "com/digitalasset/canton/crypto/v30/crypto.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

// Signed integer types are used, even though they are always non-negative in network-sent data, to match the Java gRPC
//  implementation, which uses signed integers because the JVM doesn't support unsigned integers.

service BftOrderingService {
  rpc Ping(PingRequest) returns (PingResponse);

  // For simplicity and to avoid the usage of mTLS, which is not well supported by all network
  // infrastructure, each BFT ordering node (client endpoint) opens its own P2P connection to every
  // other peer (server endpoint), performs server authentication (currently just receives the
  // sequencer id) and then pushes messages to it.
  //
  // Note that the Java gRPC implementation seems to implement unidirectional streams as
  // bidirectional ones, which seems to require anyway at least one server-sent message before
  // completion (according to https://github.com/grpc/grpc-java/issues/6568).
  // Using a unidirectional stream and sending an empty response from the server results
  // in Netty reference-counted buffer leaks.
  rpc Receive(stream BftOrderingServiceReceiveRequest) returns (stream BftOrderingServiceReceiveResponse);
}

message PingRequest {}

message PingResponse {}

message BftOrderingServiceReceiveRequest {
  string trace_context = 1;
  BftOrderingMessageBody body = 2;
  string sent_by_sequencer_uid = 3;
}

message BftOrderingServiceReceiveResponse {
  string sequencer_uid = 1;
}

message BftOrderingMessageBody {
  oneof message {
    SignedMessage /* AvailabilityMessage */ availability_message = 1;
    SignedMessage /* ConsensusMessage */ consensus_message = 2;
    SignedMessage /* StateTransferMessage */ state_transfer_message = 3;
  }
}

message SignedMessage {
  bytes message = 1;
  string from = 2;
  com.digitalasset.canton.crypto.v30.Signature signature = 3;
}

message AvailabilityMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";
  oneof message {
    google.protobuf.Empty ping = 1;
    StoreRequest store_request = 2;
    StoreResponse store_response = 3;
    BatchRequest batch_request = 4;
    BatchResponse batch_response = 5;
  }
}

// A `StoreRequest` is requesting another availability node to store
message StoreRequest {
  bytes batch_id = 1;
  Batch batch = 2;
}

message Batch {
  repeated OrderingRequest ordering_requests = 1;
}

message OrderingRequest {
  string trace_context = 1;
  string tag = 2;
  bytes payload = 3;

  // The following field is only used for metrics.
  google.protobuf.Timestamp ordering_start_instant = 4;
}

message StoreResponse {
  bytes batch_id = 1;
  com.digitalasset.canton.crypto.v30.Signature signature = 2;
}

message BatchRequest {
  bytes batch_id = 1;
}

message BatchResponse {
  bytes batch_id = 1;
  Batch batch = 2;
}

message ConsensusMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";
  BlockMetadata block_metadata = 1;
  int64 view_number = 2;
  string from_sequencer_uid = 3;
  int64 local_timestamp = 4; // in microseconds of UTC time since Unix epoch, updated for each newly created message
  // Might want to include segment

  oneof message {
    PrePrepare pre_prepare = 5;
    Prepare prepare = 6;
    Commit commit = 7;
    ViewChange view_change = 8;
    NewView new_view = 9;
  }
}

message BlockMetadata {
  int64 epoch_number = 1;
  int64 block_number = 2;
}

// A `PrePrepare` message is the proposal sent by the leader in a round
message PrePrepare {
  OrderingBlock block = 1;
  CanonicalCommitSet bft_time_canonical_commit_set = 2;
}

// A `Prepare` is an acknowledgement that a node received the `PrePrepare`
message Prepare {
  bytes block_hash = 1;
}

// A `Commit` means that a node have received a quorum of `Prepare`
// Upon receiving a quorum of `Commit`, a node considers the round complete
message Commit {
  bytes block_hash = 1;
}

// A `ViewChange` message is sent when an instance of PBFT fails to make progress
// before a timeout triggers.
message ViewChange {
  int32 segment_index = 1;
  repeated ConsensusCertificate consensus_certs = 2;
  // repeated CommitCertificate commit_cert = 2; // optimization for block completion across view changes
}

// A `NewView` message is sent by the next node taking over leader responsibilities
// of a PBFT instance at the end of a view change
message NewView {
  int32 segment_index = 1;
  repeated SignedMessage /*ConsensusMessage*/ view_changes = 2;
  repeated SignedMessage /*ConsensusMessage*/ pre_prepares = 3;
}

// A canonical (fixed) set of (usually 2f+1) Commit messages that completed the recent stable block.
// Check the BFT time design for more details.
message CanonicalCommitSet {
  repeated SignedMessage /*ConsensusMessage*/ canonical_commits = 1;
}

message ConsensusCertificate {
  oneof certificate {
    PrepareCertificate prepare_certificate = 1;
    CommitCertificate commit_certificate = 2;
  }
}

// A self-contained, cryptographically-verifiable set of one PrePrepare and quorum-1 Prepares that
// prove a particular value (payload) was prepared for a particular (epoch, block, view)-tuple
message PrepareCertificate {
  SignedMessage /*ConsensusMessage*/ pre_prepare = 1;
  repeated SignedMessage /*ConsensusMessage*/ prepares = 2;
}

// A self-contained, cryptographically-verifiable set of one PrePrepare and quorum-1 Commits that
// prove a particular value (payload) was committed for a particular (epoch, block, view)-tuple
message CommitCertificate {
  SignedMessage /*ConsensusMessage*/ pre_prepare = 1;
  repeated SignedMessage /*ConsensusMessage*/ commits = 2;
}

message OrderingBlock {
  repeated ProofOfAvailability proofs = 1;
}

message ProofOfAvailability {
  bytes batch_id = 1;
  repeated AvailabilityAck acks = 2;
}

message AvailabilityAck {
  string from_sequencer_uid = 1;
  com.digitalasset.canton.crypto.v30.Signature signature = 2;
}

// State transfer
message StateTransferMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";
  oneof message {
    BlockTransferRequest block_request = 1;
    BlockTransferResponse block_response = 2;
  }
}

message BlockTransferRequest {
  int64 start_epoch = 1;
  // Just to know whether we need to send the previous BFT time (see below).
  int64 latest_completed_epoch = 2;
}

message BlockTransferResponse {
  // Latest completed epoch of the serving node.
  int64 latest_completed_epoch = 1;
  // Effective time of the topology for the latest completed epoch of the serving node.
  google.protobuf.Timestamp latest_completed_epoch_topology_effective_time = 2;
  repeated BlockTransferData block_transfer_data = 3;
  // For BFT time calculation.
  repeated SignedMessage /*ConsensusMessage*/ last_block_commits = 4;
}

message BlockTransferData {
  // Reused to reduce the number of messages and conversions.
  SignedMessage /*ConsensusMessage*/ block_pre_prepare = 1;
  // Can only be true for last blocks in epochs, used to correctly tick the topology during state transfer.
  bool pending_topology_changes = 2;
}
